# lassa-transmission-pipeline

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
app/: app.py
docs/: assumptions.md  data_sources.md  model_equations.md
notebooks/: 01_exploration.ipynb  02_lag_analysis.ipynb  02_log_analysis.ipynb  03_early_warning_demo.ipynb  04_early_warning_demo1.ipynb  04_log.ipynb  05_early_warning_demo1.ipynb  seasonal_alignment.ipynb
scripts/: aggregate_era5_month_to_daily.py  aggregate_era5_state_daily_to_weekly.py  aggregate_era5_zip_month_to_daily.py  download_era5_daily_nigeria.py  download_era5_monthly_nigeria.py  era5_daily_to_state_daily.py  make_lassa_weekly_balanced_panel.py  plot_lassa_vs_rain.py  process_lassa_weekly_state.py  run_era5_monthly_pipeline.py  run_pipeline.py  seir_model.py
